# turboSAP_payroll-

./: .gitignore  ADMIN_SCOPE.md  ADMIN_VISION.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DIAGRAMS.md  CHANGES_DEC2024.md  FILE_DESCRIPTIONS.md  MFA_ARCHITECTURE.md  PAYROLL_AREA_ANALYSIS.md  README.md  REFACTOR_SUMMARY.md  ROLE_ARCHITECTURE.md  UI_DESIGN_PRINCIPLES.md  index.html  package-lock.json  package.json  payper25.csv  tailwind.config.js  tailwind.config.ts  test_admin_login.py  test_download.csv  transcribe.py  vite.config.ts
backend/: .gitignore  Makefile  configuration.py  graph.py  main.py  payment_method_graph.py  payroll_area_graph.py  pyproject.toml  questions.py  questions_current.json  requirements.txt  turbosap.db
backend/.ebextensions/: python.config
backend/app/: auth.py  database.py  export_api.py  main.py  middleware.py  roles.py
backend/app/agents/: graph.py
backend/app/agents/payments/: payment_method_graph.py
backend/app/agents/payroll/: payroll_area_graph.py
backend/app/config/: configuration.py  questions_current.json
backend/app/data/: README.md  ReachNettDataManager.py  module_files.json  modules_metadata.json  payment_method_question.json
backend/app/data/employee-management/: questions.json
backend/app/routes/: __init__.py  ai_config.py  data_terminal.py  hierarchy.py  knowledgebase.py  module_config.py
backend/app/services/: knowledgebase_upload.py  questions.py
backend/tests/: test_payment_method_graph.py  test_reachnett_data_manager.py
scripts/: build_backend_zip.sh
(+107 files in other folders)
